# schedulers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
djinni/: schedulers.yaml
include/schedulers/: package_task_as_c_callback.hpp  schedulers-jni.hpp  schedulers-objcpp.hpp  schedulers.hpp  utils.hpp
include/schedulers/djinni/: schedulers-jni.hpp
src/: schedulers-android.cpp  schedulers-jni.cpp  schedulers.cpp
src/java/de/knejp/schedulers/: Schedulers.java  SharedNativeThreadPoolExecutor.java
test/: CMakeLists.txt
test/android/SchedulersTest/: build.gradle
test/android/SchedulersTest/app/: build.gradle  proguard-rules.pro
test/android/SchedulersTest/app/src/androidTest/java/de/knejp/schedulerstest/: ApplicationTest.java
test/android/SchedulersTest/app/src/main/: AndroidManifest.xml
test/android/SchedulersTest/app/src/main/java/de/knejp/schedulerstest/: MainActivity.java
test/android/SchedulersTest/app/src/main/jni/: schedulers-android.cpp
test/android/SchedulersTest/app/src/main/res/layout/: activity_main.xml
test/android/SchedulersTest/app/src/main/res/values/: strings.xml
test/java/: CMakeLists.txt  java-test.cpp
test/java/de/knejp/schedulerstest/: SharedNativeThreadPoolTest.java  Test.java
unittests/: CMakeLists.txt  main.cpp  package_task_as_c_callback.cpp  schedulers.cpp  test_tools.hpp  work_item.cpp
